- Redesign diff generation function: aider--magit-generate-feature-branch-diff-file
  - Redesign the function to make it more clear to user: at first, let user choose diff type (eg. staged, base branch, branch range, commit hash. For branch range, ask user if it is local or remote. Then perform corresponding action given these detail requirement.
  - Move git related feature to aider-git.el

** v0.10.0

- Add diff-change aider code snippet, it is a useful pattern to let aider suggest code change given diff as example
- Add aider-software-planning.el: start a software planning session with Aider
- Add aider-magit-blame-analyze: combines magit-blame with AI analysis to help understand code history and reasoning behind changes for a file or selected region.

** v0.9.0

- Add aider-add-module function, it will add files with suffix in the module directory to aider session. It will be useful for the whole module level analysis and code change.
- Add recently added aider command, "/reasoning-effort" and "/think-tokens", to keyword highlight
- aider-change-model will ask reasoning-effort for chatgpt o4,o3,o1 model, when it is main model change
- README improvement
- Updated Chinese version of README
- aider-pull-or-review-diff-file support pull changes for magit staged files, as default option
- refactor the code review function since it has grown very large, with C-c a R (LLM suggest the refactoring strategy and I go ahead to accept it).
- aider-pull-or-review-diff-file: add function to resolve branch refs for remote branch handling
- aider-prompt-mode: improve robustness of snippet directory setup
- expose aider /copy command as a menu item
- Add experimental feature, aider-bootstrap.el. It introduce functions to bootstrap common code / doc structures using Aider.

** v0.8.4

- Improve prompts for 
  - diff review: aider-pull-or-review-diff-file
  - code refactoring suggestion: aider--handle-ask-llm-suggestion 
  - debug exception: aider-debug-exception

** v0.8.3
